--- a/NanaZip.UI.Classic/NanaZip.vcxproj
+++ b/NanaZip.UI.Classic/NanaZip.vcxproj
@@ -76,6 +76,8 @@
     <Image Include="Assets\Toolbar\Info_32x32.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
+    <Image Include="Assets\Toolbar\Mount_24x24.bmp" />
+    <Image Include="Assets\Toolbar\Mount_32x32.bmp" />
     <Image Include="Assets\Toolbar\Move_24x24.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
