--- a/NanaZip.UI.Classic/SevenZip/CPP/7zip/UI/FileManager/resource.rc
+++ b/NanaZip.UI.Classic/SevenZip/CPP/7zip/UI/FileManager/resource.rc
@@ -98,6 +98,7 @@ BEGIN
     BEGIN
       MENUITEM "Archive Toolbar",           IDM_VIEW_ARCHIVE_TOOLBAR
       MENUITEM "Standard Toolbar",          IDM_VIEW_STANDARD_TOOLBAR
+      MENUITEM "WimDism Toolbar",           IDM_VIEW_WIMDISM_TOOLBAR
       MENUITEM SEPARATOR
       MENUITEM "Large Buttons",             IDM_VIEW_TOOLBARS_LARGE_BUTTONS
       MENUITEM "Show Buttons Text",         IDM_VIEW_TOOLBARS_SHOW_BUTTONS_TEXT
@@ -142,6 +143,7 @@ IDI_ICON  ICON  "../../../../../../Assets/NanaZipPreview.ico"
 
 IDB_ADD        BITMAP  "../../../../../Assets/Toolbar/Add_32x32.bmp"
 IDB_EXTRACT    BITMAP  "../../../../../Assets/Toolbar/Extract_32x32.bmp"
+IDB_MOUNT      BITMAP  "../../../../../Assets/Toolbar/Mount_32x32.bmp"
 IDB_TEST       BITMAP  "../../../../../Assets/Toolbar/Test_32x32.bmp"
 IDB_COPY       BITMAP  "../../../../../Assets/Toolbar/Copy_32x32.bmp"
 IDB_MOVE       BITMAP  "../../../../../Assets/Toolbar/Move_32x32.bmp"
@@ -149,6 +151,7 @@ IDB_DELETE     BITMAP  "../../../../../Assets/Toolbar/Delete_32x32.bmp"
 IDB_INFO       BITMAP  "../../../../../Assets/Toolbar/Info_32x32.bmp"
 IDB_ADD2       BITMAP  "../../../../../Assets/Toolbar/Add_24x24.bmp"
 IDB_EXTRACT2   BITMAP  "../../../../../Assets/Toolbar/Extract_24x24.bmp"
+IDB_MOUNT2     BITMAP  "../../../../../Assets/Toolbar/Mount_24x24.bmp"
 IDB_TEST2      BITMAP  "../../../../../Assets/Toolbar/Test_24x24.bmp"
 IDB_COPY2      BITMAP  "../../../../../Assets/Toolbar/Copy_24x24.bmp"
 IDB_MOVE2      BITMAP  "../../../../../Assets/Toolbar/Move_24x24.bmp"
