--- a/NanaZip.UI.Classic/NanaZipShellExtension.vcxproj.filters
+++ b/NanaZip.UI.Classic/NanaZipShellExtension.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="SevenZip\CPP\7zip\UI\FileManager\StringUtils.cpp">
       <Filter>SevenZip\FileManager</Filter>
     </ClCompile>
+    <ClCompile Include="SevenZip\CPP\7zip\UI\Common\WimDismCall.cpp">
+      <Filter>SevenZip\UI Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SevenZip\CPP\7zip\UI\Explorer\resource.h">
@@ -301,6 +304,9 @@
     </ClInclude>
     <ClInclude Include="SevenZip\CPP\7zip\UI\FileManager\StringUtils.h">
       <Filter>SevenZip\FileManager</Filter>
+    </ClInclude>
+    <ClInclude Include="SevenZip\CPP\7zip\UI\Common\WimDismCall.h">
+      <Filter>SevenZip\UI Common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
