--- a/NanaZip.UI.Classic/NanaZipConsole.vcxproj.filters
+++ b/NanaZip.UI.Classic/NanaZipConsole.vcxproj.filters
@@ -282,6 +282,9 @@
     <ClCompile Include="SevenZip\CPP\7zip\Archive\Common\ItemNameUtils.cpp">
       <Filter>SevenZip\Archive Common</Filter>
     </ClCompile>
+    <ClCompile Include="SevenZip\CPP\7zip\UI\Common\WimDismCommandLine.cpp">
+      <Filter>SevenZip\UI Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SevenZip\CPP\7zip\UI\Console\StdAfx.h">
@@ -589,6 +592,9 @@
     </ClInclude>
     <ClInclude Include="SevenZip\CPP\7zip\Archive\Common\ItemNameUtils.h">
       <Filter>SevenZip\Archive Common</Filter>
+    </ClInclude>
+    <ClInclude Include="SevenZip\CPP\7zip\UI\Common\WimDismCommandLine.h">
+      <Filter>SevenZip\UI Common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
