--- a/NanaZip.UI.Classic/NanaZip.vcxproj
+++ b/NanaZip.UI.Classic/NanaZip.vcxproj
@@ -64,6 +64,8 @@
     <Image Include="Assets\Toolbar\Delete_32x32.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
+    <Image Include="Assets\Toolbar\Expand_24x24.bmp" />
+    <Image Include="Assets\Toolbar\Expand_32x32.bmp" />
     <Image Include="Assets\Toolbar\Extract_24x24.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
@@ -76,18 +78,24 @@
     <Image Include="Assets\Toolbar\Info_32x32.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
+    <Image Include="Assets\Toolbar\Mount_24x24.bmp" />
+    <Image Include="Assets\Toolbar\Mount_32x32.bmp" />
     <Image Include="Assets\Toolbar\Move_24x24.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
     <Image Include="Assets\Toolbar\Move_32x32.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
+    <Image Include="Assets\Toolbar\New_24x24.bmp" />
+    <Image Include="Assets\Toolbar\New_32x32.bmp" />
     <Image Include="Assets\Toolbar\Test_24x24.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
     <Image Include="Assets\Toolbar\Test_32x32.bmp">
       <DeploymentContent>false</DeploymentContent>
     </Image>
+    <Image Include="Assets\Toolbar\WimInfo_24x24.bmp" />
+    <Image Include="Assets\Toolbar\WimInfo_32x32.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SevenZip\CPP\7zip\Archive\Common\ItemNameUtils.cpp" />
